--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "publisher": "thegeoffstevens",
     "repository": {
         "type": "git", 
-        "url": "https://github.com/geoffstevens8/cody-blue", 
+        "url": "https://github.com/geoffstevens8/cody-blue"
+    }, 
     "icon": "images/icon.png",
     "engines": {
         "vscode": "^1.31.0"
